--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.4.3'
     implementation 'androidx.navigation:navigation-compose:2.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
