--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'io.coil-kt:coil-compose:2.4.0'
 }
